--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>test</title>
+    <title>에브리 레스토랑</title>
   </head>
   <body style="background-color: #e9ecef;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
